fix: center align heading

--- a/src/components/BetSection/BetCard/styles.scss
+++ b/src/components/BetSection/BetCard/styles.scss
@@ -92,6 +92,7 @@
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       background-clip: text;
+      text-align: center;
       text-fill-color: transparent;
 
       @include md {
